setup.tf
provider "aws" {
  region = "us-east-1"
}

# Crear VPC
resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "terraform-vpc"
  }
}

# Crear IGW
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
}

# Obtener la tabla de enrutamiento principal
data "aws_route_table" "main_route_table" {
  filter {
    name   = "association.main"
    values = ["true"]
  }
  filter {
    name   = "vpc-id"
    values = [aws_vpc.vpc.id]
  }
}

# Crear ruta para el acceso a Internet
resource "aws_default_route_table" "internet_route" {
  default_route_table_id = data.aws_route_table.main_route_table.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "Terraform-RouteTable"
  }
}

# Obtener las AZ disponibles
data "aws_availability_zones" "azs" {
  state = "available"
}

# Crear Subnet
resource "aws_subnet" "subnet" {
  availability_zone = element(data.aws_availability_zones.azs.names, 0)
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = "10.0.1.0/24"
}

# Crear Grupo de Seguridad (Permitir TCP/80 & TCP/22)
resource "aws_security_group" "sg" {
  name        = "sg"
  description = "Allow TCP/80 & TCP/22"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "Allow SSH traffic"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Crear Instancia EC2
resource "aws_instance" "webserver" {
  ami           = "ami-00c39f71452c08778" 
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.subnet.id
  security_groups = [aws_security_group.sg.name]

  # Script de inicio para instalar Apache
  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install apache2 -y
              sudo systemctl start apache2
              sudo systemctl enable apache2
              EOF

  tags = {
    Name = "Apache Web Server"
  }
}

resource "aws_s3_bucket" "my-bucket-mundoe" {
  bucket = "my-bucket-mundoe"
  acl    = "private"

  tags = {
    Name        = "MiAplicacionBucket"
    Environment = "Production"
  }
}

resource "aws_dynamodb_table" "my-table-mundoe" {
  name         = "my-table-mundoe"
  billing_mode = "PAY_PER_REQUEST"

  hash_key = "id"

  attribute {
    name = "id"
    type = "S"
  }

  tags = {
    Name        = "MiAplicacionTabla"
    Environment = "Production"
  }
}

# Output de la IP pública de la instancia EC2
output "Webserver-Public-IP" {
  value = aws_instance.webserver.public_ip
}
